{
    "name": "TestInputAction",
    "maps": [
        {
            "name": "Test",
            "id": "197eb269-a345-44ce-822a-4a429c3e5f95",
            "actions": [
                {
                    "name": "Test_1",
                    "type": "Button",
                    "id": "7de7469b-4995-4006-937b-9aae6d34a05d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_2",
                    "type": "Button",
                    "id": "c32e75b3-33a3-48a9-863e-846d7a78e57a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_3",
                    "type": "Button",
                    "id": "20342206-df2b-4036-8883-ef012b9f9d18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_4",
                    "type": "Button",
                    "id": "9d32566b-4b54-4dee-a9b9-384488c5eab5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_5",
                    "type": "Button",
                    "id": "d6150bb0-6f61-4b40-8094-6d511e4c2b48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6dd4e6a7-4321-4bbc-86d1-e75191f6d82f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Test_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5d7730a-0a61-4a72-b03b-20d7c681c958",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Test_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c58bad9-30e1-49be-bfe5-0ee0d56f8ed3",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Test_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2a3b128-6194-4e26-95ed-59c56b79f3a8",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Test_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f492f649-0991-4872-8627-0050728cf2b7",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Test_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard",
            "bindingGroup": "KeyBoard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}